Customized theme, code cleanup

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin">16dp</dimen>
+    <dimen name="margin_36">36dp</dimen>
 </resources>
